--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,10 @@ footer
     background-color: var(--maingGreen);
     padding: 20px 0;
 }
+
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
