modal with jquery

--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,48 @@
 body {
-  font-family: "Questrial", sans-serif; }
+  font-family: "Questrial", sans-serif;
+}
 
 /***********
 index html style
 ************/
 header h1 {
-  color: black; }
+  color: black;
+}
 
 footer a {
   text-decoration: none;
-  color: white; }
+  color: white;
+}
 
 .jumbotron {
   padding: 30px;
   background-color: #023f35;
   color: white;
-  margin: 0; }
+  margin: 0;
+}
 
 .row-content {
   padding: 50px 0;
   border-bottom: 1px ridge;
-  min-height: 200px; }
+  min-height: 200px;
+}
 
 .navbar {
-  background-color: #09420c; }
+  background-color: #09420c;
+}
 
 .nav-link {
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
 .carousel {
-  border: solid gray; }
+  border: solid gray;
+}
 
 /***********
 aboutUs
@@ -43,21 +52,29 @@ footer
 ************/
 .site-footer {
   background-color: #023f35;
-  padding: 20px 0; }
+  padding: 20px 0;
+}
 
 #carouselButton {
   position: absolute;
   right: 0;
-  bottom: 0; }
+  bottom: 0;
+}
 
 #reserveModal .modal-header {
-  background-color: #17A2B8; }
-  #reserveModal .modal-header .modal-title {
-    color: white; }
+  background-color: #17A2B8;
+}
+#reserveModal .modal-header .modal-title {
+  color: white;
+}
 
 #loginModal .modal-header {
-  background-color: purple; }
-  #loginModal .modal-header .modal-title {
-    color: white; }
+  background-color: purple;
+}
+#loginModal .modal-header .modal-title {
+  color: white;
+}
 
 /*# sourceMappingURL=styles.scss.map */
+
+/*# sourceMappingURL=style.css.map */
